{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 29,
  "lineage": "fba81743-c72b-44df-8e3a-1c6d47158b55",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01df7c80e2aa60122",
            "arn": "arn:aws:ec2:eu-west-3:747033881323:instance/i-05543f6cb83fa128d",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "globoweb-uat-27906-nginx_profile",
            "id": "i-05543f6cb83fa128d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0583bb5388e63767f",
            "private_dns": "ip-10-1-0-206.eu-west-3.compute.internal",
            "private_ip": "10.1.0.206",
            "public_dns": "ec2-52-47-141-52.eu-west-3.compute.amazonaws.com",
            "public_ip": "52.47.141.52",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b70a3ab49b46ea06",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e76f682f07b04c43",
            "tags": {
              "Name": "globoweb-UAT-nginx-0",
              "billing_code": "ACCT8675309",
              "company": "Globomantics - ICO in the cloud",
              "environement": "UAT",
              "project": "Globomantics - ICO in the cloud-ico-web-app"
            },
            "tags_all": {
              "Name": "globoweb-UAT-nginx-0",
              "billing_code": "ACCT8675309",
              "company": "Globomantics - ICO in the cloud",
              "environement": "UAT",
              "project": "Globomantics - ICO in the cloud-ico-web-app"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0423ac6ccee7a38a2"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx-sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_iam_instance_profile.instance_profile",
            "module.web_app_s3.aws_iam_role.allow_nginx_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "random_integer.rand"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01df7c80e2aa60122",
            "arn": "arn:aws:ec2:eu-west-3:747033881323:instance/i-0cae15e0666883b74",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "globoweb-uat-27906-nginx_profile",
            "id": "i-0cae15e0666883b74",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d2924772d4fcddf8",
            "private_dns": "ip-10-1-1-106.eu-west-3.compute.internal",
            "private_ip": "10.1.1.106",
            "public_dns": "ec2-13-36-194-244.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.36.194.244",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0953242aaa2cf6f1d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03f0b34311d4373aa",
            "tags": {
              "Name": "globoweb-UAT-nginx-1",
              "billing_code": "ACCT8675309",
              "company": "Globomantics - ICO in the cloud",
              "environement": "UAT",
              "project": "Globomantics - ICO in the cloud-ico-web-app"
            },
            "tags_all": {
              "Name": "globoweb-UAT-nginx-1",
              "billing_code": "ACCT8675309",
              "company": "Globomantics - ICO in the cloud",
              "environement": "UAT",
              "project": "Globomantics - ICO in the cloud-ico-web-app"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0423ac6ccee7a38a2"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx-sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_iam_instance_profile.instance_profile",
            "module.web_app_s3.aws_iam_role.allow_nginx_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "random_integer.rand"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01df7c80e2aa60122",
            "arn": "arn:aws:ec2:eu-west-3:747033881323:instance/i-02bba0961d7bfa7b1",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "globoweb-uat-27906-nginx_profile",
            "id": "i-02bba0961d7bfa7b1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0472a48d95bb756cd",
            "private_dns": "ip-10-1-0-143.eu-west-3.compute.internal",
            "private_ip": "10.1.0.143",
            "public_dns": "ec2-15-188-144-215.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.188.144.215",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a7b4d1ac35237945",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e76f682f07b04c43",
            "tags": {
              "Name": "globoweb-UAT-nginx-2",
              "billing_code": "ACCT8675309",
              "company": "Globomantics - ICO in the cloud",
              "environement": "UAT",
              "project": "Globomantics - ICO in the cloud-ico-web-app"
            },
            "tags_all": {
              "Name": "globoweb-UAT-nginx-2",
              "billing_code": "ACCT8675309",
              "company": "Globomantics - ICO in the cloud",
              "environement": "UAT",
              "project": "Globomantics - ICO in the cloud-ico-web-app"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0423ac6ccee7a38a2"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx-sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_iam_instance_profile.instance_profile",
            "module.web_app_s3.aws_iam_role.allow_nginx_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "random_integer.rand"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01df7c80e2aa60122",
            "arn": "arn:aws:ec2:eu-west-3:747033881323:instance/i-01a8ff0f20334a970",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "globoweb-uat-27906-nginx_profile",
            "id": "i-01a8ff0f20334a970",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08166741490b5c7ae",
            "private_dns": "ip-10-1-1-20.eu-west-3.compute.internal",
            "private_ip": "10.1.1.20",
            "public_dns": "ec2-13-36-236-159.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.36.236.159",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0615af215706aab7d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03f0b34311d4373aa",
            "tags": {
              "Name": "globoweb-UAT-nginx-3",
              "billing_code": "ACCT8675309",
              "company": "Globomantics - ICO in the cloud",
              "environement": "UAT",
              "project": "Globomantics - ICO in the cloud-ico-web-app"
            },
            "tags_all": {
              "Name": "globoweb-UAT-nginx-3",
              "billing_code": "ACCT8675309",
              "company": "Globomantics - ICO in the cloud",
              "environement": "UAT",
              "project": "Globomantics - ICO in the cloud-ico-web-app"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0423ac6ccee7a38a2"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx-sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_iam_instance_profile.instance_profile",
            "module.web_app_s3.aws_iam_role.allow_nginx_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "globoweb-uat-27906",
                "enabled": true,
                "prefix": "alb-logs"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:747033881323:loadbalancer/app/globoweb-UAT-alb/8c1f7b38ccbe7c21",
            "arn_suffix": "app/globoweb-UAT-alb/8c1f7b38ccbe7c21",
            "desync_mitigation_mode": "defensive",
            "dns_name": "globoweb-UAT-alb-1112036839.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:747033881323:loadbalancer/app/globoweb-UAT-alb/8c1f7b38ccbe7c21",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "globoweb-UAT-alb",
            "security_groups": [
              "sg-047cd916a24ba548c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03f0b34311d4373aa"
              },
              {
                "subnet_id": "subnet-0e76f682f07b04c43"
              }
            ],
            "subnets": [
              "subnet-03f0b34311d4373aa",
              "subnet-0e76f682f07b04c43"
            ],
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics - ICO in the cloud",
              "environement": "UAT",
              "project": "Globomantics - ICO in the cloud-ico-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics - ICO in the cloud",
              "environement": "UAT",
              "project": "Globomantics - ICO in the cloud-ico-web-app"
            },
            "vpc_id": "vpc-0d8ca91d27cfd5793",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:747033881323:listener/app/globoweb-UAT-alb/8c1f7b38ccbe7c21/921d746ab8bc9372",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:747033881323:targetgroup/globoweb-UAT-alb-tg/89e3a48685a20c08",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:747033881323:listener/app/globoweb-UAT-alb/8c1f7b38ccbe7c21/921d746ab8bc9372",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:747033881323:loadbalancer/app/globoweb-UAT-alb/8c1f7b38ccbe7c21",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics - ICO in the cloud",
              "environement": "UAT",
              "project": "Globomantics - ICO in the cloud-ico-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics - ICO in the cloud",
              "environement": "UAT",
              "project": "Globomantics - ICO in the cloud-ico-web-app"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.nginx",
            "aws_lb_target_group.nginx",
            "aws_security_group.alb-sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:747033881323:targetgroup/globoweb-UAT-alb-tg/89e3a48685a20c08",
            "arn_suffix": "targetgroup/globoweb-UAT-alb-tg/89e3a48685a20c08",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:747033881323:targetgroup/globoweb-UAT-alb-tg/89e3a48685a20c08",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "globoweb-UAT-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d8ca91d27cfd5793"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-3:747033881323:targetgroup/globoweb-UAT-alb-tg/89e3a48685a20c08-20220406190219758200000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:747033881323:targetgroup/globoweb-UAT-alb-tg/89e3a48685a20c08",
            "target_id": "i-05543f6cb83fa128d"
          },
          "dependencies": [
            "aws_instance.nginx",
            "aws_lb_target_group.nginx",
            "aws_security_group.nginx-sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_iam_instance_profile.instance_profile",
            "module.web_app_s3.aws_iam_role.allow_nginx_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "random_integer.rand"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-3:747033881323:targetgroup/globoweb-UAT-alb-tg/89e3a48685a20c08-20220406190219857300000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:747033881323:targetgroup/globoweb-UAT-alb-tg/89e3a48685a20c08",
            "target_id": "i-0cae15e0666883b74"
          },
          "dependencies": [
            "aws_instance.nginx",
            "aws_lb_target_group.nginx",
            "aws_security_group.nginx-sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_iam_instance_profile.instance_profile",
            "module.web_app_s3.aws_iam_role.allow_nginx_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "random_integer.rand"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-3:747033881323:targetgroup/globoweb-UAT-alb-tg/89e3a48685a20c08-20220406190219827700000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:747033881323:targetgroup/globoweb-UAT-alb-tg/89e3a48685a20c08",
            "target_id": "i-02bba0961d7bfa7b1"
          },
          "dependencies": [
            "aws_instance.nginx",
            "aws_lb_target_group.nginx",
            "aws_security_group.nginx-sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_iam_instance_profile.instance_profile",
            "module.web_app_s3.aws_iam_role.allow_nginx_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "random_integer.rand"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-3:747033881323:targetgroup/globoweb-UAT-alb-tg/89e3a48685a20c08-20220406190219807100000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:747033881323:targetgroup/globoweb-UAT-alb-tg/89e3a48685a20c08",
            "target_id": "i-01a8ff0f20334a970"
          },
          "dependencies": [
            "aws_instance.nginx",
            "aws_lb_target_group.nginx",
            "aws_security_group.nginx-sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_iam_instance_profile.instance_profile",
            "module.web_app_s3.aws_iam_role.allow_nginx_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:747033881323:security-group/sg-047cd916a24ba548c",
            "description": "ALB Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-047cd916a24ba548c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "globoweb-UAT-nginx_alb_sg",
            "name_prefix": "",
            "owner_id": "747033881323",
            "revoke_rules_on_delete": false,
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics - ICO in the cloud",
              "environement": "UAT",
              "project": "Globomantics - ICO in the cloud-ico-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics - ICO in the cloud",
              "environement": "UAT",
              "project": "Globomantics - ICO in the cloud-ico-web-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d8ca91d27cfd5793"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:747033881323:security-group/sg-0423ac6ccee7a38a2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0423ac6ccee7a38a2",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "globoweb-UAT-nginx_sg",
            "name_prefix": "",
            "owner_id": "747033881323",
            "revoke_rules_on_delete": false,
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics - ICO in the cloud",
              "environement": "UAT",
              "project": "Globomantics - ICO in the cloud-ico-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics - ICO in the cloud",
              "environement": "UAT",
              "project": "Globomantics - ICO in the cloud-ico-web-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d8ca91d27cfd5793"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:747033881323:internet-gateway/igw-018409a4c064d1fe5",
            "id": "igw-018409a4c064d1fe5",
            "owner_id": "747033881323",
            "tags": {
              "Name": "globoweb-UAT-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics - ICO in the cloud",
              "environement": "UAT",
              "project": "Globomantics - ICO in the cloud-ico-web-app"
            },
            "tags_all": {
              "Name": "globoweb-UAT-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics - ICO in the cloud",
              "environement": "UAT",
              "project": "Globomantics - ICO in the cloud-ico-web-app"
            },
            "vpc_id": "vpc-0d8ca91d27cfd5793"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-018409a4c064d1fe5",
            "id": "r-rtb-0bbe83a8430c0a2971080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bbe83a8430c0a297",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:747033881323:route-table/rtb-0bbe83a8430c0a297",
            "id": "rtb-0bbe83a8430c0a297",
            "owner_id": "747033881323",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "globoweb-UAT-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics - ICO in the cloud",
              "environement": "UAT",
              "project": "Globomantics - ICO in the cloud-ico-web-app"
            },
            "tags_all": {
              "Name": "globoweb-UAT-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics - ICO in the cloud",
              "environement": "UAT",
              "project": "Globomantics - ICO in the cloud-ico-web-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d8ca91d27cfd5793"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-012d68455b2016a41",
            "route_table_id": "rtb-0bbe83a8430c0a297",
            "subnet_id": "subnet-0e76f682f07b04c43"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054789914994f363e",
            "route_table_id": "rtb-0bbe83a8430c0a297",
            "subnet_id": "subnet-03f0b34311d4373aa"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:747033881323:subnet/subnet-0e76f682f07b04c43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e76f682f07b04c43",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "747033881323",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "globoweb-UAT-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics - ICO in the cloud",
              "environement": "UAT",
              "project": "Globomantics - ICO in the cloud-ico-web-app"
            },
            "tags_all": {
              "Name": "globoweb-UAT-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics - ICO in the cloud",
              "environement": "UAT",
              "project": "Globomantics - ICO in the cloud-ico-web-app"
            },
            "vpc_id": "vpc-0d8ca91d27cfd5793"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:747033881323:subnet/subnet-03f0b34311d4373aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f0b34311d4373aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "747033881323",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "globoweb-UAT-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics - ICO in the cloud",
              "environement": "UAT",
              "project": "Globomantics - ICO in the cloud-ico-web-app"
            },
            "tags_all": {
              "Name": "globoweb-UAT-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics - ICO in the cloud",
              "environement": "UAT",
              "project": "Globomantics - ICO in the cloud-ico-web-app"
            },
            "vpc_id": "vpc-0d8ca91d27cfd5793"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:747033881323:vpc/vpc-0d8ca91d27cfd5793",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-018dbd69885116f1b",
            "default_route_table_id": "rtb-01e1030d91df3587f",
            "default_security_group_id": "sg-0b4b83d1b897d0fa0",
            "dhcp_options_id": "dopt-21548849",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d8ca91d27cfd5793",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01e1030d91df3587f",
            "owner_id": "747033881323",
            "tags": {
              "Name": "globoweb-UAT-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics - ICO in the cloud",
              "environement": "UAT",
              "project": "Globomantics - ICO in the cloud-ico-web-app"
            },
            "tags_all": {
              "Name": "globoweb-UAT-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics - ICO in the cloud",
              "environement": "UAT",
              "project": "Globomantics - ICO in the cloud-ico-web-app"
            }
          }
        }
      ]
    }
  ]
}